namespaces/spam2000-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: spam2000
  labels:
    name: spam2000
    app.kubernetes.io/name: spam2000
    app.kubernetes.io/part-of: spam2000-platform
